--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -77,7 +77,7 @@
             
             <div class="form-row">
               <div class="form-group">
-                <label for="expiryDate">Expiry Date *</label>
+                <label for="expiryDate">Expiration Date *</label>
                 <input type="text" id="expiryDate" name="expiryDate" 
                        placeholder="MM/YY" required>
               </div>
